--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wmc-components",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "private": false,
   "author": "wmc",
   "scripts": {
@@ -12,7 +12,7 @@
     "build:esm": "rollup --config build/rollup.esm.config.js",
     "build:umd": "rollup --config build/rollup.umd.config.js",
     "clean": "rimraf ./dist",
-    "prepublishOnly": "npm run lint && npm run test&& npm run build"
+    "prepublishOnly": "npm run build"
   },
   "husky": {
     "hooks": {
@@ -26,7 +26,8 @@
   ],
   "dependencies": {
     "core-js": "^3.6.5",
-    "lodash-es": "^4.17.20"
+    "lodash-es": "^4.17.20",
+    "mitt": "^2.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.1.1",
