--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
-language: node_js
-node_js:
-- node
+# language: node_js
+# node_js:
+# - node
+
+
 # deploy:
 #   provider: npm
 #   email: 1006004868@qq.com
